--- a/src/app/pages/attendance/masters/list/mastersList.html
+++ b/src/app/pages/attendance/masters/list/mastersList.html
@@ -5,8 +5,8 @@
 
 <div ng-show="showWeeklyOffList">
 
-    <div class="row">
-        <div ba-panel ba-panel-class="x-medium" ba-panel-title="weekOff">
+    <!-- <div class="row">
+        <div ba-panel ba-panel-class="x-medium" ba-panel-title="weekOff"> 
             <div class="col-md-3">
                 <div class="panel-body" style="overflow: scroll">
                     <ul class="list-unstyled side-menu maxHeight450">
@@ -67,5 +67,83 @@
             </div>
 
         </div>
-    </div>
-</div>
+    </div> 
+     -->
+    <div class="row">
+        <div ba-panel ba-panel-class="x-medium" ba-panel-title="weekOff">
+            <table class="table table-responsive table-bordered  table-condensed">
+                <thead>
+                    <tr>
+
+                        <th class="col-md-1">Days</th>
+                        <th class="col-md-1">First</th>
+                        <th class="col-md-1">Second</th>
+                        <th class="col-md-1">Third</th>
+                        <th class="col-md-1">Fourth</th>
+                        <th class="col-md-1">Fifth</th>
+
+                    </tr>
+                </thead>
+                <tbody>
+
+                    <tr ng-repeat="value in days">
+                        <td ng-bind="value.name"></td>
+                        <td>
+                            <select class="form-control">
+                             <option value="0">--Select--</option>
+                              <option value="0">Full</option>
+                              <option value="1">First Half</option>
+                              <option value="2">Second Half</option>
+  
+                            </select>
+                        </td>
+                        <td> <select class="form-control">
+                             <option value="0">--Select--</option>
+                              <option value="0">Full</option>
+                              <option value="1">First Half</option>
+                              <option value="2">Second Half</option>
+  
+                            </select></td>
+                        <td> <select class="form-control">
+                             <option value="0">--Select--</option>
+                              <option value="0">Full</option>
+                              <option value="1">First Half</option>
+                              <option value="2">Second Half</option>
+  
+                            </select></td>
+                        <td> <select class="form-control">
+                             <option value="0">--Select--</option>
+                              <option value="0">Full</option>
+                              <option value="1">First Half</option>
+                              <option value="2">Second Half</option>
+  
+                            </select></td>
+                            <td> <select class="form-control">
+                             <option value="0">--Select--</option>
+                              <option value="0">Full</option>
+                              <option value="1">First Half</option>
+                              <option value="2">Second Half</option>
+  
+                            </select></td>
+
+                        <!-- <td>
+                                                                                <select ng-if="!value.isUnpaid && value.days.length>0" ng-model="value.leaveDr" ng-options="opt.id as opt.name for opt in value.days"
+                                                                                    ng-change="onLeaveDrChange(value,'{{value.leaveDr}}' )"></select>
+                                                                                <div ng-if="value.isUnpaid">{{value.leaveDr}} Days</div>
+                                                                            </td>
+                                                                            <td>
+                                                                                <div class="checkbox" ng-if="!value.isUnpaid">
+                                                                                    <label class="custom-checkbox">      
+                                                                        <input  type="checkbox" ng-model="value.isHalfDay" ng-change="onHalfDayChange(value,'{{value.isHalfDay}}')"/> 
+                                                                        <span></span>
+                                                                        </label>
+                                                                                </div>
+                                                                            </td>
+                                                                            <td ng-bind="value.minDays"></td>
+                                                                            <td ng-bind="value.maxDays"></td>
+                                                                            <td></td> -->
+                    </tr>
+                </tbody>
+
+            </table>
+        </div>
