--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -253,6 +253,15 @@ input:focus, select:foucs {
   width: 100%;
 }
 
+.djGrid300{
+  height: 300px;
+  width: 100%;
+}
+.djGrid400{
+  height: 400px;
+  width: 100%;
+}
+
 .pnl100{
   height: 200px;
 }
