--- a/src/app/pages/attendance/masters/list/mastersList.html
+++ b/src/app/pages/attendance/masters/list/mastersList.html
@@ -98,23 +98,25 @@
             </div>
 
             <div class="row">
-                <div class="form-group col-md-12">
+                <div class="form-group col-md-4">
                     <label><input type="checkbox" ng-model="entity.SMLateAllowed" value="true"></label>
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMLateAllowed.place}}</label>
                 </div>
-            </div>
 
-            <div class="row" ng-show="entity.SMLateAllowed">
-
-                <div class="form-group col-md-1 col-md-offset-1">
+                <div ng-show="entity.SMLateAllowed" class="form-group col-md-1">
                     <input ng-disabled="!entity.SMLateAllowed" class="form-control" type="text" ng-model="entity.SMNumberOfTimeForLateAllow">
                 </div>
-                <div class="form-group col-md-9">
+                <div ng-show="entity.SMLateAllowed" class="form-group col-md-4">
 
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMNumberOfTimeForLateAllow.text}}</label>
                 </div>
-
             </div>
+
+            <!--<div class="row" ng-show="entity.SMLateAllowed">
+
+
+
+            </div>-->
 
             <div class="row">
                 <div class="form-group col-md-12">
@@ -134,14 +136,23 @@
 
             <div class="row">
 
-                <div ng-show="entity.SMCOffAllowed" class="form-group col-md-4 col-md-offset-1">
+                <div ng-show="entity.SMCOffAllowed" class="form-group col-md-3 col-md-offset-1">
                     <label><input ng-disabled="!entity.SMCOffAllowed" type="radio" name="forCompOff" ng-model="entity.SMIsCompOffLeave"></label>
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMIsCompOffLeave.place}}</label>
 
 
                 </div>
 
-                <div ng-show="entity.SMCOffAllowed" class="form-group col-md-4">
+                <div ng-show="entity.SMCOffAllowed" class="form-group col-md-1">
+                    <input class="form-control" type="text" ng-model="entity.SMNumberOfLeaveForCompOffLeave">
+                </div>
+                <div class="form-group col-md-3" ng-show="entity.SMCOffAllowed">
+                    <label for="inputPassword3 ">{{page.pageinfo.fields.SMNumberOfLeaveForCompOffLeave.text}}</label>
+                </div>
+
+
+
+                <div ng-show="entity.SMCOffAllowed" class="form-group col-md-3">
                     <label><input type="radio" ng-disabled="!entity.SMCOffAllowed" name="forCompOff" ng-model="entity.SMIsCompOffCash"></label>
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMIsCompOffCash.place}}</label>
 
@@ -150,17 +161,14 @@
                 </div>
             </div>
 
-            <div class="row" ng-show="entity.SMCOffAllowed">
-
+            <!--<div class="row" ng-show="entity.SMCOffAllowed">
                 <div class="form-group col-md-1 col-md-offset-2">
                     <input class="form-control" type="text" ng-model="entity.SMNumberOfLeaveForCompOffLeave">
                 </div>
                 <div class="form-group col-md-9">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMNumberOfLeaveForCompOffLeave.text}}</label>
-
-                    <!--<field-box page="page" ng-column="page.pageinfo.fields.SMMinimumHourForHalfDay " ng-entity="entity " form="editForm "></field-box>-->
                 </div>
-            </div>
+            </div>-->
 
             <h3 class="with-line ">Add Over Time Rule</h3>
             <div class="row">
@@ -170,33 +178,37 @@
                 </div>
             </div>
             <div class="row" ng-show="entity.SMOverTimeAllowed">
-                <div class="form-group col-md-12 col-md-offset-1">
+                <div class="form-group col-md-3 col-md-offset-1">
                     <label><input ng-disabled="!entity.SMOverTimeAllowed" type="checkbox" ng-model="entity.SMIsCalulatedAfterLeaveDuration" value="true"></label>
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMIsCalulatedAfterLeaveDuration.place}}</label>
                 </div>
-            </div>
 
-            <div class="row" ng-show="entity.SMOverTimeAllowed">
-                <div class="form-group col-md-12 col-md-offset-1">
+                <div class="form-group col-md-4">
                     <label><input type="checkbox" ng-disabled="!entity.SMOverTimeAllowed" ng-model="entity.SMIsAllowOverTimeMargin" value="true"></label>
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMIsAllowOverTimeMargin.place}}</label>
                 </div>
-            </div>
 
-            <div class="row" ng-show="entity.SMOverTimeAllowed">
-                <div class="form-group col-md-1 col-md-offset-2">
+                <div class="form-group col-md-1">
                     <input class="form-control" ng-disabled="!entity.SMIsAllowOverTimeMargin" type="text" ng-model="entity.SHApplicableOverTimeAfterMinute">
                 </div>
-                <div class="form-group col-md-9">
+                <div class="form-group col-md-3">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SHApplicableOverTimeAfterMinute.text}}</label>
                 </div>
-
             </div>
+
+            <!--<div class="row" ng-show="entity.SMOverTimeAllowed">
+                
+            </div>
+
+            <div class="row" ng-show="entity.SMOverTimeAllowed">
+                
+
+            </div>-->
 
 
 
             <div class="row" ng-show="entity.SMOverTimeAllowed">
-                <div class="form-group col-md-4">
+                <div class="form-group col-md-3 col-md-offset-1">
                     <!--<label><input type="checkbox" ng-model="entity.SMSalaryHeadId" value=""></label>-->
                     <label for="inputPassword3 ">{{page.pageinfo.fields.SMSalaryHeadId.text}}</label>
                     <field-box page="page" ng-column="page.pageinfo.fields.SMSalaryHeadId " ng-entity="entity " form="editForm "></field-box>
