--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -261,6 +261,10 @@ input:focus, select:foucs {
   height: 400px;
   width: 100%;
 }
+.paybandgrid{
+  height: 350px;
+  width: 100%;
+}
 
 .pnl100{
   height: 200px;
