bug fix payband:dj

--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -261,6 +261,11 @@ input:focus, select:foucs {
   height: 400px;
   width: 100%;
 }
+.djSubGrid
+{
+  height: 100px;
+  width: 100%;
+}
 .paybandgrid{
   height: 350px;
   width: 100%;
