--- a/src/app/pages/payroll/payband/payband.html
+++ b/src/app/pages/payroll/payband/payband.html
@@ -71,7 +71,8 @@
                             </div>
 
 
-                            <div id="djGridPay" ui-grid="payGridOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection
+                            <div id="djGridPay" ui-grid="payGridOptions" 
+                            ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection
                                 ui-grid-pinning ui-grid-edit class="paybandgrid"></div>
                         </div>
                         <div class="col-md-2">
