--- a/src/app/pages/attendance/masters/list/mastersList.html
+++ b/src/app/pages/attendance/masters/list/mastersList.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">
 <div ng-hide="showWeeklyOffList">
     <grid-box ng-model="page">
     </grid-box>
@@ -8,78 +9,40 @@
         <form ng-submit="weekOffSave(editForm,entity)">
             <div ba-panel ba-panel-class="x-medium" ba-panel-title="weekOff">
                 <div class="row">
-                    <div class="form-group">
-                        <div class="col-md-4">
+                    <div class="col-md-6">
+                        <div class="form-group">
                             <label>Name</label>
                             <input type="textbox" class="form-control" ng-model="entity.WOSName">
                         </div>
+                    </div>
+
+                    <div class="col-md-6">
                         <div class="form-group">
-                            <label>Select Group</label>
-                            <div ng-repeat="group in groups">
-                                <div class="col-md-2">
-                                    <div class="checkbox">
-                                        <label class="custom-checkbox">      
-                                        <input  type="checkbox"  ng-model="entity.WOSGroupId" > 
-                                         <span ng-bind="group.GMCName"></span>
-                                        </label>
-                                    </div>
-                                </div>
+                            <label>Groups</label>
+                            <div>
+                                <ui-select-wrap>
+                                    <ui-select multiple ng-model="entity.WOSGroupId" theme="select2" ng-disabled="disabled" search-enabled="true" append-to-body="true">
+                                        <ui-select-match placeholder="Choose..">
+                                            {{$item.GMCName}}
+                                        </ui-select-match>
+                                        <ui-select-choices repeat="item in groups | filter: $select.search">
+                                            <span>{{ item.GMCName }}</span>
+                                        </ui-select-choices>
+                                    </ui-select>
+                                </ui-select-wrap>
                             </div>
                         </div>
                     </div>
+
                 </div>
 
                 <div class="row">
-                                       <div id="djGrid1" ui-grid="gridOptions" ui-grid-auto-resize ui-grid-pagination ui-grid-selection ui-grid-pinning ui-grid-edit class="djGrid"></div>
-                    <!-- <table class="table table-responsive table-bordered  table-condensed">
-                        <thead>
-                            <tr>
-
-                                <th class="col-md-1">Days</th>
-                                <th class="col-md-1">First</th>
-                                <th class="col-md-1">Second</th>
-                                <th class="col-md-1">Third</th>
-                                <th class="col-md-1">Fourth</th>
-                                <th class="col-md-1">Fifth</th>
-
-                            </tr>
-                        </thead>
-                        <tbody>
-
-                            <tr ng-repeat="value in weekDays">
-                                <td ng-bind="value.name"></td>
-                                <td>
-                                    <select class="form-control" ng-model="entity.SGWDFirst" ng-options="type.id as type.name for type in value.dayType">                      
-                                    </select>
-                                </td>
-                                <td>
-                                    <select class="form-control" ng-model="entity.SGWDSecond" ng-options="type.id as type.name for type in value.dayType">                       
-                                </select>
-                                </td>
-                                <td>
-                                    <select class="form-control" ng-model="entity.SGWDThird" ng-options="type.id as type.name for type in value.dayType">                       
-                                </select>
-                                </td>
-                                <td>
-                                    <select class="form-control" ng-model="entity.SGWDFourth" ng-options="type.id as type.name for type in value.dayType">                       
-                                </select>
-                                </td>
-                                <td>
-                                    <select class="form-control"  ng-model="entity.SGWDFifth" ng-options="type.id as type.name for type in value.dayType">                       
-                                </select>
-                                </td>
-
-                            </tr>
-                        </tbody>
-
-                    </table> -->
+                    <div ui-grid="weekGridOptions" ui-grid-expandable ui-grid-selection ui-grid-edit></div>
                 </div>
                 <div class="row">
-                </div>
-                <div class="row text-center">
-                    <div class="form-group">
+                    <div class="form-group text-center">
                         <button type="submit" class="btn btn-info btn-lg">Save</button>
-                        <button type="button" class="btn btn-danger btn-lg">Close</button>
+                        <button type="button" class="btn btn-danger btn-lg" ng-click="closeWeekOffAdd()">Close</button>
                     </div>
                 </div>
             </div>
