--- a/src/app/pages/payroll/payband/payband.html
+++ b/src/app/pages/payroll/payband/payband.html
@@ -52,7 +52,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-10">
-                            <div class="row">
+                            <div class="row" ng-hide="true">
                                 <div class="col-md-8">
                                     <div class="pull-left">
                                         Diffrences of earning to be added in
@@ -71,8 +71,9 @@
                             </div>
 
 
-                            <div id="djGridPay" ui-grid="payGridOptions" ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection
-                                ui-grid-pinning ui-grid-edit class="djGrid500" ng-style="getTableHeight()"></div>
+                            <div id="djGridPay" ui-grid="payGridOptions" 
+                            ui-grid-expandable ui-grid-auto-resize ui-grid-pagination ui-grid-selection
+                                ui-grid-pinning ui-grid-edit class="paybandgrid"></div>
                         </div>
                         <div class="col-md-2">
                             <table class="table table-condensed table-striped">
