--- a/src/app/pages/attendance/masters/list/mastersList.html
+++ b/src/app/pages/attendance/masters/list/mastersList.html
@@ -2,7 +2,7 @@
 <div ng-hide="showWeeklyOffList">
     <grid-box ng-model="page">
     </grid-box>
-    
+
 </div>
 
 <div ng-show="showWeeklyOffList">
@@ -19,19 +19,19 @@
 
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label>Groups</label>
-                            <div>
-                                <ui-select-wrap>
-                                    <ui-select multiple ng-model="entity.WOSGroupId" theme="select2" ng-disabled="disabled" search-enabled="true" append-to-body="true">
-                                        <ui-select-match placeholder="Choose..">
-                                            {{$item.GMCName}}
-                                        </ui-select-match>
-                                        <ui-select-choices repeat="item in groups | filter: $select.search">
-                                            <span>{{ item.GMCName }}</span>
-                                        </ui-select-choices>
-                                    </ui-select>
-                                </ui-select-wrap>
-                            </div>
+                            <label style="margin-left:15px;">Groups</label>
+                             <ui-select-wrap>
+                                <ui-select multiple class="col-md-12" ng-model="entity.WOSGroupId" theme="select2" ng-disabled="disabled" search-enabled="true"
+                                    append-to-body="true">
+                                    <ui-select-match placeholder="Choose..">
+                                        {{$item.GMCName}}
+                                    </ui-select-match>
+                                    <ui-select-choices repeat="item in groups | filter: $select.search">
+                                        <span>{{ item.GMCName }}</span>
+                                    </ui-select-choices>
+                                </ui-select>
+                            </ui-select-wrap>
+
                         </div>
                     </div>
 
